--- a/frontend/src/styles/movies.css
+++ b/frontend/src/styles/movies.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,300&display=swap');
 
+.hero-info{
+    margin-top: 2rem;
+}
+
+.hero-info h2{
+    color: #fff;
+}
+
 
 .movies-container{
     font-family: 'Poppins', sans-serif;
